--- a/qml.qrc
+++ b/qml.qrc
@@ -15,5 +15,6 @@
         <file>icons/profile.svg</file>
         <file>icons/right-arrow.svg</file>
         <file>icons/settings.svg</file>
+        <file>Logo-Finalization.png</file>
     </qresource>
 </RCC>
