Remove stackview functionality and update rest of the app

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,6 +7,7 @@
         <file>ProfileView.qml</file>
         <file>SettingsView.qml</file>
         <file>AccItem.qml</file>
+        <file>ProfileLogin.qml</file>
     </qresource>
     <qresource prefix="/img">
         <file>icons/minimize.svg</file>
